Added particles effect on the background.

--- a/css/style.css
+++ b/css/style.css
@@ -125,3 +125,11 @@ ul#entries.fold li.selected {
 .info:hover {
   opacity: 1;
 }
+
+#particles-js {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
