Removed the need for the entry layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,10 @@
     <main class="main container">
       {% include search.html %}
       {% include alphabet.html %}
-      
-      {{ content }}
+
+      <div class="box">
+        {{ content }}
+      </div>
     </main>
 
     {% include footer.html %}
