Added aria-hidden to particles element

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   {% include head.html %}
 
   <body>
-    <div id="particles-js" class="particles"></div>
+    <div id="particles-js" class="particles" aria-hidden="true"></div>
 
     {% include header.html %}
     
