Fixed some assets paths

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header role="banner" class="header">
   <div class="container">
     <a href="/" class="header__link">
-      <img src="/assets/images/logo.png" alt="Simplified JavaScript Jargon logo" />
+      <img src="{{ "/assets/images/logo.png" | prepend: site.baseurl | prepend: site.url }}" alt="Simplified JavaScript Jargon logo" />
     </a>
   </div>
 </header>
