--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,4 +6,4 @@ window.router = {
 };
 </script>
 <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-<script src="/assets/js/main.js"></script>
+<script src="{{ "/assets/js/main.js" | prepend: site.baseurl | prepend: site.url }}"></script>
