Added a temporary fix, waiting for the domain

--- a/_includes/letter.html
+++ b/_includes/letter.html
@@ -2,7 +2,7 @@
 {% for entry in site.glossary %}
   {% assign first_char = entry.title|split:''|first|downcase %}
   {% if first_char == page.letter %}
-    <li><a href="{{ entry.url }}">{{ entry.title }}</a></li>
+    <li><a href="{{ entry.url | prepend: site.baseurl }}">{{ entry.title }}</a></li>
   {% endif %}
 {% endfor %}
 </ul>
