Added proper title in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,5 +3,6 @@
     <a href="/" class="header__link">
       <img src="{{ "/assets/images/logo.png" | prepend: site.baseurl }}" alt="Simplified JavaScript Jargon logo" />
     </a>
+    <h1 class="visually-hidden">Simplified JavaScript Jargon</h1>
   </div>
 </header>
