--- a/_includes/head.html
+++ b/_includes/head.html
@@ -67,6 +67,17 @@
     margin: 0 auto;
   }
 
+  .visually-hidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
+
   .box {
     padding: 20px;
     border: 3px solid black;
