Made the main script async

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,4 +5,4 @@ window.router = {
   {% endfor %}
 };
 </script>
-<script src="{{ "/assets/js/main.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/js/main.min.js" | prepend: site.baseurl }}" async></script>
