--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,5 +1,6 @@
 <div class="box box--accent box--collapse" id="search-container" style="display: none;">
   <form class="search" id="search-form">
+    <label for="search-field" class="visually-hidden">Search an entry</label>
     <input type="search" placeholder="What would you want to learn…" class="search__input" list="entries" id="search-field" autofocus="" />
     <button class="search__button" type="submit" aria-label="Search">
       <span>🔍</span>
