--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
   {% include head.html %}
 
   <body>
+    {% include sprite.svg %}
+
     <div id="particles-js" class="particles" aria-hidden="true"></div>
 
     {% include header.html %}
