--- a/_includes/search.html
+++ b/_includes/search.html
@@ -3,7 +3,9 @@
     <label for="search-field" class="visually-hidden">Search an entry</label>
     <input type="search" placeholder="What would you want to learn…" class="search__input" list="entries" id="search-field" autofocus="" />
     <button class="search__button" type="submit" aria-label="Search">
-      <span>🔍</span>
+      <svg class="icon icon-search">
+        <use xlink:href="#icon-search"></use>
+      </svg>
     </button>
   </form>
   <datalist id="entries">
