--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,5 +13,7 @@
   {{ styles | scssify }}
   </style>
 
+  <link rel="icon" href="/assets/images/favicon.png">
+  <!--[if IE]><link rel="shortcut icon" href="/assets/images/favicon.ico"><![endif]-->
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 </head>
