--- a/_includes/styles.css
+++ b/_includes/styles.css
@@ -105,6 +105,14 @@ pre {
   padding: 0;
 }
 
+.intro {
+  font-size: 80%;
+  color: #999;
+  font-style: italic;
+  margin-top: 0;
+  text-align: center;
+}
+
 /* -------------------------------------------------------------------------- *\
  * Index list
  * -------------------------------------------------------------------------- */
