--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,8 @@
     <div id="particles-js" class="particles" aria-hidden="true"></div>
 
     {% include header.html %}
-    
+    {% include particles_toggle.html %}
+
     <main class="main container">
       {% include search.html %}
       {% include alphabet.html %}
