Initialise particles animation based on prefers-reduced-motion query

--- a/_includes/particles_toggle.html
+++ b/_includes/particles_toggle.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <input type="checkbox" name="particles-toggle" id="particles-toggle" class="particles-toggle__checkbox" checked />
+  <input type="checkbox" name="particles-toggle" id="particles-toggle" class="particles-toggle__checkbox" />
   <label for="particles-toggle" class="particles-toggle__label">
     Toggle particles animation
   </label>
